src/assets/styles/_page.scss
@use "foundation" as *;
@use "shared" as *;

//  Responsive


// Page Specific

.homepage {
  & .experience {
    &__cta {
      margin-top: 48px;
      display: flex;
      justify-content: space-between;
      align-items: end;

      h2 {
        margin: 0;
      }
    }

    &__text {
      margin: 32px 0 24px;
    }

    &__delivery-list {
      display: flex;
      flex-direction: column;
      justify-content: end;
    }

    &__content {
      display: flex;
      flex-direction: column;

      @include tablet-media-query {
        & .experience__cta {
          order: 2;
        }
        & .experience__text {
          order: 3;
        }
        & .experience__illustration {
          order: 1;
          margin: 32px 0 24px 0;
        }
      }

      @include mobile-media-query {
        & .experience__cta {
          order: 2;
        }
        & .experience__text {
          order: 3;
        }
        & .experience__illustration {
          order: 1;
          margin: 32px 0 24px 0;
        }
      }
    }
  }

  & .who-we-are {
    &__icon {
      height: 64px;
      width: 64px;

      @include tablet-media-query {
        margin-top: 24px;
      }
  
      @include mobile-media-query {
        margin-top: 24px;
      }
    }
  }

  & .experience-showcase {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    max-width: 1440px;
    margin: 0 auto;
    padding: 0 48px;

    @include tablet-media-query {
      grid-template-columns: repeat(12, 1fr);
      max-width: 769px;
      margin: 0 24px;
      padding: 0;
    }

    @include mobile-media-query {
      grid-template-columns: repeat(12, 1fr);
      max-width: 376px;
      margin: 0 16px;
      padding: 0;
    }

    &__item {
      height: 288px;
      display: flex;
      justify-content: center;
      align-items: flex-end;

      @include desktop-media-query {
        &:nth-child(1) {
          padding-top: 40px;
        }
        &:nth-child(2) {
          margin-top: 40px;
        }
        &:nth-child(3) {
          margin-top: 40px;
        }
        &:nth-child(4) {
          margin-top: 40px;
        }
        &:nth-child(5) {
          padding-top: 40px;
        }
      }

      @include tablet-media-query {
        height: 150px;

        &:nth-child(1) {
          padding-top: 16px;
        }
        &:nth-child(2) {
          margin-top: 16px;
        }
        &:nth-child(3) {
          padding-top: 16px;
        }
        &:nth-child(4) {
          padding-top: 16px;
        }
        &:nth-child(5) {
          margin-top: 16px;
        }
      }

      @include mobile-media-query {
        height: 100px;
        padding-top: 16px;

        &:nth-child(1) {
          padding-top: 16px;
        }
        &:nth-child(2) {
          margin-top: 0px;
        }
        &:nth-child(3) {
          padding-top: 16px;
        }
        &:nth-child(4) {
          padding-top: 16px;
        }
        &:nth-child(5) {
          margin-top: 16px;
        }
      }

      img {
        width: 50%;
      }
    }
  }

  & .blog-post-card {
    padding: 8px 8px 8px 32px;
  }
}

.about-page {
  & .who-we-are {
    &__icon {
      height: 64px;
      width: 64px;
    }
  }
}

.careers-page {
  & .who-we-are {
    &__icon {
      height: 64px;
      width: 64px;
    }
    &__order {
      align-self: flex-end;
      color: inherit;
      font-family: "PPNeueBit-Bold", "Tahoma", "san-serif";
      font-size: 48px;
      text-decoration: none;
      text-transform: uppercase;
      height: 48px;
      width: 48px;
    }
  }

  & .hiring-step {
    @include tablet-media-query {
      margin-bottom: 24px;
    }
  }
}

.navbar {
  a.active {
    text-decoration: underline;
    text-decoration-thickness: 2px;
    text-underline-offset: 4px;
  }
}

.our-work-page {
  .org-card {
    @include tablet-media-query {
      padding-bottom: 56px;
    }
    @include mobile-media-query {
      padding-bottom: 28px;
    }
    padding-bottom: 98px;

    .org-logo {
      width: auto;
      max-height: 84px;

      &__mobile {
        margin-top: 120px;
      }
    }
  

    .our-work-screenshot-wrapper {
      align-items: center;
      justify-content: center;

      .org-screenshot {
        height: auto;
        padding: 16px;
        width: 90%;
        max-width: 548px;
  
        @include tablet-media-query {
          padding-left: 0;
        }
  
        @include mobile-media-query {
          padding-left: 0;
        }
      }

      &.cdc-screenshot {
        background-color: #549371;
      }

      &.cms-screenshot {
        background-color: #BFD4BF;
      }

      &.va-screenshot {
        background-color: $dark-linen;
      }
    }

    &__content {
      padding-right: 80px;
    }

  }
}

.blog-page {
  & .hero.section--spacing {
    padding-bottom: 0;
  }
  &__header {
    padding: 32px 0;

    .section--intro {
      align-items: center;

      & h1 {
        margin-bottom: 0;
      }
    }
  }

  @include tablet-media-query {
    .hero {
      padding-top: 32px;
    }
  }

  @include mobile-media-query {
    .hero {
      padding-top: 32px;
    }
  }
}

.blog-post-page {
  .container {
    max-width: $blog-post-max-width;
  }

  h1 {
    font-size: 42px;
    margin-bottom: 12px;
  }

  .content--wrapper {
    padding: 0 32px;

    & .rt-asset {
      display: flex;
      justify-content: center;

      & img {
        width: 50%;
      }
    }
    
    p {
      padding-bottom: 20px;
    }

    .tldr {
      font-style: italic;
      margin-bottom: 20px;
    }
  }

  ol, ul {
    padding: 0 16px;
  }

  .rt-asset {
    padding: 36px 0;
  }

  .author-link,
  .author-link:visited {
    color: $black;
  }

  .pullquote {
    float: right;
    width: min(420px, 40%);
    margin: 0 0 16px 16px;
    padding: 36px 20px;
    background-color: $linen;
    color: $black;

    .pullquote__figure {
      img {
        display: block;
        max-width: 100%;
        height: auto;
      }
    }

    .pullquote__text {
      margin: 10px 0;
      padding-bottom: 0;
      font-weight: bold;
      font-size: 20px;
    }

    .pullquote__cta {
      color: inherit;
      cursor: pointer;
    }
  }

  .content--wrapper::after {
    content: "";
    display: table;
    clear: both;
  }

  @include tablet-media-query {
    .section--intro {
      padding-top: 40px;
    }
    .content--wrapper {
      padding: 0 16px;
    }
    .pullquote {
      float: none;
      width: 100%;
      margin: 12px 0;
    }
  }
  @include mobile-media-query {
    .section--intro {
      padding-top: 40px;
    }
    .content--wrapper {
      padding: 0 16px;
    }
    .pullquote {
      float: none;
      width: 100%;
      margin: 12px 0;
    }
  }
}

